--- a/src/views/auth/login.pug
+++ b/src/views/auth/login.pug
@@ -8,7 +8,7 @@ block content
                 div(class="form-container-header")
                     p(class="form-container-header-label") Login
                     a(class="form-container-header-nav" href="/auth/register") Sign Up Instead
-                form(class="auth-form" hx-post="/auth/login" hx-target=".page")
+                form(class="standard-form auth-form" hx-post="/auth/login" hx-target=".page")
                     div(class="input-container")
                         p(class="form-label") Email
                         input.edit(class="secondary-shadow" type="text" name="email" placeholder="Email")
