--- a/src/views/auth/register.pug
+++ b/src/views/auth/register.pug
@@ -8,7 +8,7 @@ block content
                 div(class="form-container-header")
                     p(class="form-container-header-label") Sign up
                     a(class="form-container-header-nav" href="/auth/login") Login Instead
-                form(class="auth-form" hx-post="/auth/register" hx-target=".page")
+                form(class="standard-form auth-form" hx-post="/auth/register" hx-target=".page")
                     div(class="input-container")
                         p(class="form-label") Email
                         input.edit(class="secondary-shadow" type="text" name="email" placeholder="Email" value=email)
