--- a/src/views/users/profile_you.pug
+++ b/src/views/users/profile_you.pug
@@ -7,7 +7,7 @@ block profile_main
     div(class="profile-main primary-color primary-shadow")
         div(class="profile-user-info-pp-container")
             div(class="profile-user-info-pp")
-            form()
+            form(class="standard-form")
                 div(class="input-and-label")
                     p Edit Profile Picture - 
                     input.edit(id="pp-input" type="file" name="profilePicture" accept=".png,.jpg,.jpeg")
