re-wired project creation to work with the new searchable projects index

--- a/src/assets/css/buttons.css
+++ b/src/assets/css/buttons.css
@@ -19,6 +19,10 @@
     background: #94a3b8;
 }
 
+.text-hover:hover{
+    color: #64748b;
+}
+
 .submit-button{
     width: 100%;
     height: 40px;
