--- a/src/views/projects/index.pug
+++ b/src/views/projects/index.pug
@@ -4,7 +4,10 @@ block mainContent
 
     div(class="lobby-main primary-color outline")
         div(class="header")
-            p #{user.userName} -> Projects
+            div(class="left")
+                p #{user.userName} -> Projects
+            div(class="right")
+                p(class="clickable text-hover" hx-get="/projects/new" hx-target=".page") New Project
         div(class="body")
             form(hx-post="/projects/search" hx-target=".projects-list-container" hx-swap="outerHTML")
                 div(class="search-bar-container")
