--- a/src/assets/css/lobby.css
+++ b/src/assets/css/lobby.css
@@ -198,7 +198,7 @@
 .lobby-main .header{
     width: 100%;
     height: 60px;
-    flex-grow: 0;
+    /* flex-grow: 0; */
 
     display: flex;
     justify-content: space-between;
