--- a/src/assets/css/projects.css
+++ b/src/assets/css/projects.css
@@ -24,8 +24,6 @@
 /* New Project Page */
 .create-project-form-container{
     width: 100%;
-    height: 100%;
+    height: 600px;
     display: flex;
-    justify-content: center;
-    align-items: center;
 }
