--- a/src/assets/css/projects.css
+++ b/src/assets/css/projects.css
@@ -5,7 +5,7 @@
 
 .projects-list-container{
     width: 300px;
-    margin-top: 15px;
+    margin-top: 30px;
 }
 
 .projects-list{
@@ -13,17 +13,32 @@
 }
 
 .project{
-    margin-bottom: 5px;
+    height: 35px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
-.project p{
+.project .project-name{
+    font-family: "RubikBold";
+    text-decoration: underline;
     font-size: 14px;
+}
+
+.project .project-org{
+    font-size: 14px;
+}
+
+.vertical-list-divider{
+    height: 1px;
+    border-bottom: 1px solid black;
+    margin: 10px 0px;
 }
 
 
 /* New Project Page */
 .create-project-form-container{
     width: 100%;
-    height: 600px;
     display: flex;
 }
