--- a/src/views/projects/new.pug
+++ b/src/views/projects/new.pug
@@ -2,7 +2,8 @@ extends ../users/lobby.pug
 
 block mainContent
 
-    div(class="lobby-main primary-color outline")
+    //- div(class="lobby-main primary-color outline")
+    div(class="lobby-main primary-color")
         div(class="header")
             div(class="left")
                 p(class="header-segment") #{userInfo.user.name}
