--- a/src/views/users/lobby.pug
+++ b/src/views/users/lobby.pug
@@ -5,7 +5,8 @@ block content
     div(class="page-content")
         div(class="scroll")
             div(class="lobby")
-                div(class="lobby-sidebar primary-color outline")
+                //- div(class="lobby-sidebar primary-color outline")
+                div(class="lobby-sidebar primary-color")
                     ul
                         li
                             p(class="clickable") Projects
