--- a/src/assets/css/lobby.css
+++ b/src/assets/css/lobby.css
@@ -28,7 +28,8 @@
     width: 100%;
     height: 80px;
 
-    margin-top: 100px;
+    /* margin-top: 100px; */
+    margin-top: 20px;
 
 }
 
@@ -185,9 +186,10 @@
     display: flex;
     flex-direction: column;
 
-    padding: 20px 40px;
+    /* padding: 20px 40px; */
+    padding: 20px;
     /* margin-left: 100px; */
-    margin-left: 80px;
+    margin-left: 100px;
 
     border-radius: 5px;
 }
