--- a/src/views/projects/search.pug
+++ b/src/views/projects/search.pug
@@ -1,10 +1,19 @@
 - if(projects.length === 0)
     div(class="projects-list-container empty-projects-list")
-        p Couldn't find any projects!
+        p Oops! It looks like you don't have any projects!
         p(id="create-project-link") Create one here
 
 - else
     div(class="projects-list-container projects-list")
-        - for(const project of projects)
+        - for(let i = 0; i < projects.length; i++)
+            - const project = projects[i];
+            
             div(class="project")
-                p(class="project-name") #{project.name}
+                div(class="project-top")
+                    p(class="project-name") #{project.name}
+                    p(class="project-org") #{project.organization.name}
+                
+                p(class="project-description") Limiting to #{project.callLimit} calls every #{project.timeFrame.name.toLowerCase()}
+
+            - if(i < projects.length - 1)
+                div(class="vertical-list-divider")
