--- a/src/assets/css/pagination.css
+++ b/src/assets/css/pagination.css
@@ -1,6 +1,39 @@
-.pagination-container{
+.pagination{
+    width: 80%;
     height: 40px;
+
+    display: flex;
+    justify-content: space-between;
+    
 
     margin-top: 30px;
     border: 1px solid black;
+}
+
+.pagination .pagination-left, .pagination .pagination-right{
+    width: 40px;
+    border: 1px solid red;
+}
+
+.pagination .pagination-left p, .pagination .pagination-right p{
+    height: 40px;
+    width: 40px;
+    text-align: center;
+    line-height: 40px;
+}
+
+.pagination .pagination-center{
+    display: flex;
+}
+
+.pagination .pagination-center .page-num{
+    font-family: "RubikBold";
+    width: 30px;
+    height: 40px;
+    line-height: 40px;
+    font-size: 14px;
+}
+
+.pagination .pagination-center .current-page-num{
+    color: #006bee;
 }
