--- a/src/assets/css/projects.css
+++ b/src/assets/css/projects.css
@@ -5,11 +5,16 @@
 
 .projects-list-container{
     width: 600px;
+    height: 500px;
     margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .projects-list{
-    /* padding-left: 5px; */
+    width: 100%;
 }
 
 .project{
