--- a/src/views/projects/search.pug
+++ b/src/views/projects/search.pug
@@ -1,19 +1,41 @@
-- if(projects.length === 0)
-    div(class="projects-list-container empty-projects-list")
-        p Oops! It looks like you don't have any projects!
-        p(id="create-project-link") Create one here
+div(class="projects-list-container")
+    - if(projects.length === 0)
+        div(class="empty-projects-list")
+            p Oops! It looks like you don't have any projects!
+            p(id="create-project-link") Create one here
 
-- else
-    div(class="projects-list-container projects-list")
-        - for(let i = 0; i < projects.length; i++)
-            - const project = projects[i];
-            
-            div(class="project")
-                div(class="project-top")
-                    p(class="project-name") #{project.name}
-                    p(class="project-org") #{project.organization.name}
+    - else
+        div(class="projects-list")
+            - for(let i = 0; i < projects.length; i++)
+                - const project = projects[i];
                 
-                p(class="project-description") Limiting to #{project.callLimit} calls every #{project.timeFrame.name.toLowerCase()}
+                div(class="project")
+                    div(class="project-top")
+                        p(class="project-name") #{project.name}
+                        p(class="project-org") #{project.organization.name}
+                    
+                    p(class="project-description") Limiting to #{project.callLimit} calls every #{project.timeFrame.name.toLowerCase()}
 
-            - if(i < projects.length - 1)
-                div(class="vertical-list-divider")
+                - if(i < projects.length - 1)
+                    div(class="vertical-list-divider")
+
+        div(class="pagination")
+            - const pageNums = [curPage];
+            
+            - if(curPage > 1)
+                - pageNums.unshift(curPage - 1);
+            - if(curPage < numPages)
+                - pageNums.push(curPage + 1);
+
+            div(class="pagination-left")
+                p <
+
+            div(class="pagination-center")
+                - for(const pageNum of pageNums)
+                    - if(pageNum === curPage)
+                        p(class="page-num current-page-num") #{pageNum}
+                    - else
+                        p(class="page-num") #{pageNum}
+
+            div(class="pagination-left")
+                p >
