--- a/src/assets/css/lobby.css
+++ b/src/assets/css/lobby.css
@@ -51,9 +51,9 @@
     text-decoration: underline;
 }
 
-.lobby-sidebar ul li p:hover{
+/* .lobby-sidebar ul li a:hover{
     color: #64748b;
-}
+} */
 
 
 
