--- a/src/views/projects/new.pug
+++ b/src/views/projects/new.pug
@@ -1,58 +1,48 @@
-extends ../users/lobby.pug
+extends ./layout.pug
 
-block mainContent
+block subContent
 
-    //- div(class="lobby-main primary-color outline")
-    div(class="lobby-main primary-color")
-        div(class="header")
-            div(class="left")
-                p(class="header-segment") #{userInfo.user.name}
-                p(class="header-segment-separator") ->
-                p(class="header-segment") Projects
-            div(class="right")
-                p(class="clickable text-hover" hx-get="/projects" hx-target=".page") Projects
+    div(class="create-project-form-container")
+        form(class="standard-form create-project-form" hx-post="/projects/create" hx-target=".page")
+            
+            div(class="dropdown-input-container")
+                p(class="form-label") Org
+                select(class="org-dropdown primary-button secondary-color secondary-shadow clickable" name="orgName")
+                    - for(let i = 0; i < organizations.length; i++)
+                        - const org = organizations[i];
+                        - if(i === 0)
+                            option(selected) #{org.name}
+                        - else
+                            option() #{org.name}
 
-        div(class="create-project-form-container")
-            form(class="standard-form create-project-form" hx-post="/projects/create" hx-target=".page")
-                
-                div(class="dropdown-input-container")
-                    p(class="form-label") Org
-                    select(class="org-dropdown primary-button secondary-color secondary-shadow clickable" name="orgName")
-                        - for(let i = 0; i < userInfo.organizations.length; i++)
-                            - const org = userInfo.organizations[i];
-                            - if(i === 0)
-                                option(selected) #{org.name}
-                            - else
-                                option() #{org.name}
+            div(class="input-container")
+                p(class="form-label") Name
+                input.edit(class="secondary-shadow" type="text" name="name" value=name placeholder="Project Name")
 
-                div(class="input-container")
-                    p(class="form-label") Name
-                    input.edit(class="secondary-shadow" type="text" name="name" value=name placeholder="Project Name")
+            div(class="input-container")
+                p(class="form-label") Call Limit
+                input.edit(class="secondary-shadow" type="text" name="callLimit" value=name placeholder="10, 100, ...")
 
-                div(class="input-container")
-                    p(class="form-label") Call Limit
-                    input.edit(class="secondary-shadow" type="text" name="callLimit" value=name placeholder="10, 100, ...")
+            div(class="choice-selector-input-container")
+                p(class="form-label") Timeframe
+                div(class="choice-selector")
+                    - for(let i = 0; i < timeframes.length; i++)
+                        - let buttonClass = "choice-button secondary-shadow";
+                        - if(i === 0) buttonClass += " secondary-color";
 
-                div(class="choice-selector-input-container")
-                    p(class="form-label") Timeframe
-                    div(class="choice-selector")
-                        - for(let i = 0; i < timeframes.length; i++)
-                            - let buttonClass = "choice-button secondary-shadow";
-                            - if(i === 0) buttonClass += " secondary-color";
-
-                            div(class="choice")
-                                button(class=buttonClass type="button")
-                                    p #{timeframes[i].name}
-                                div(class="choice-description")
-                                    p(class="soft-text") Limit your program to a certain number of API calls per #{timeframes[i].name.toLowerCase()}
-                        
-                        input.edit(id="hidden-timeframe-input" type="hidden" name="timeFrameName" value="Second")
+                        div(class="choice")
+                            button(class=buttonClass type="button")
+                                p #{timeframes[i].name}
+                            div(class="choice-description")
+                                p(class="soft-text") Limit your program to a certain number of API calls per #{timeframes[i].name.toLowerCase()}
                     
-
-                button(class="submit-button secondary-color secondary-shadow clickable")
-                    p Submit
+                    input.edit(id="hidden-timeframe-input" type="hidden" name="timeFrameName" value="Second")
                 
-                p(class="form-error-message") #{errMessage}
+
+            button(class="submit-button secondary-color secondary-shadow clickable")
+                p Submit
+            
+            p(class="form-error-message") #{errMessage}
 
     script.
         var choiceButtons = document.getElementsByClassName("choice-button");
