--- a/src/views/projects/layout.pug
+++ b/src/views/projects/layout.pug
@@ -8,6 +8,9 @@ block center
                 p(class="header-segment") #{user.userName}
                 p(class="header-segment-separator") ->
                 p(class="header-segment clickable text-hover" hx-get="/projects" hx-target=".page") Projects
+                - if(project)
+                    p(class="header-segment-separator") ->
+                    p(class="header-segment") #{project.name}
             div(class="right")
                 p(class="clickable text-hover" hx-get="/projects/new" hx-target=".page") New Project
 
