--- a/src/views/projects/show.pug
+++ b/src/views/projects/show.pug
@@ -2,4 +2,42 @@ extends ./layout.pug
 
 block subContent
 
-    p #{project.name} aaaaaaaa
+    div(class="body")
+        div(class="project-show bold")
+            div(class="top-bar")
+                p(class="project-name") #{project.name}
+                p -
+                p(class="org-name clickable text-hover") #{organization.name}
+            br
+            br
+            br
+            div(class="chart-container")
+                canvas(id="project-stats-chart")
+
+        script.
+            new Chart(
+                "project-stats-chart",
+                {
+                    type: "line",
+                    data: {
+                        labels: [ 1, 2, 3, 4, 5, 6, 7 ],
+                        datasets: [
+                            {
+                                label: "abc",
+                                fill: false,
+                                lineTension: 0,
+                                backgroundColor: "rgba(0, 0, 255, 1.0)",
+                                borderColor: "rgba(0, 0, 255, 0.1)",
+                                data: [3, 2, 4, 5, 7, 1, 2]
+                            }
+                        ]
+                    },
+                    options: {
+                        legend: { display: false },
+                        scales: {
+                            yAxes: [{ ticks: { min: 0, max: 40 } }]
+                        }
+                    }
+
+                }
+            )
