--- a/src/assets/css/projects.css
+++ b/src/assets/css/projects.css
@@ -64,21 +64,45 @@
 .project-show .top-bar{
     display: flex;
     height: 14px;
-
-    /* margin-left: 20px; */
 }
 
 .project-show .top-bar p{
     height: 14px;
     
     line-height: 14px;
-    margin-left: 5px;
+    margin-right: 5px;
     
     font-family: "RubikBold";
     font-size: 14px;
+}
+
+.description-container .description{
+    font-size: 14px;
+}
+
+.chart-timeframe-filter{
+    height: 20px;
+    display: flex;
+}
+
+.chart-timeframe-filter p{
+    font-size: 14px;
+    line-height: 14px;
+
+    margin-right: 1px;
+    margin-top: 1px;
+}
+
+.chart-timeframe-filter select{
+    height: 14px;
+    font-size: 12px;
+    line-height: 14px;
+
+    text-decoration: underline;
 }
 
 .chart-container{
     height: 600px;
     width: 800px;
 }
+
