--- a/src/views/projects/show.pug
+++ b/src/views/projects/show.pug
@@ -8,11 +8,32 @@ block subContent
                 p(class="project-name") #{project.name}
                 p -
                 p(class="org-name clickable text-hover") #{organization.name}
+
+            br
+
+            div(class="description-container")
+                p(class="description") #{project.name} limits outgoing requests to #{project.callLimit} per #{projectTimeFrame.name.toLowerCase()}.
             br
             br
             br
+            br
+            br
+            br
+            br
+            br
+            
+            form(method="GET" action=`/projects/show/${project.id}`)
+                div(class="chart-timeframe-filter")
+                    p Requests last
+                    select(class="timeframe-select clickable text-hover" onchange="this.form.submit()" name="userSelectedTimeFrame") timeframe
+                        - for(const tf of ["second", "minute", "hour", "day"])
+                            - const curTFSelected = (userSelectedTimeFrame) ? userSelectedTimeFrame === tf : projectTimeFrame.name.toLowerCase() === tf ;
+                            option(selected=curTFSelected) #{tf}
+            br
+
             div(class="chart-container")
                 canvas(id="project-stats-chart")
+
 
         script.
             new Chart(
@@ -21,21 +42,12 @@ block subContent
                     type: "line",
                     data: {
                         labels: [ 1, 2, 3, 4, 5, 6, 7 ],
-                        datasets: [
-                            {
-                                label: "abc",
-                                fill: false,
-                                lineTension: 0,
-                                backgroundColor: "rgba(0, 0, 255, 1.0)",
-                                borderColor: "rgba(0, 0, 255, 0.1)",
-                                data: [3, 2, 4, 5, 7, 1, 2]
-                            }
-                        ]
+                        datasets: !{JSON.stringify(datasets)}
                     },
                     options: {
-                        legend: { display: false },
+                        legend: { display: true, position: "bottom" },
                         scales: {
-                            yAxes: [{ ticks: { min: 0, max: 40 } }]
+                            yAxes: [{ ticks: { min: 0, max: 10 } }]
                         }
                     }
 
