building out organizations UI

--- a/src/views/organizations/layout.pug
+++ b/src/views/organizations/layout.pug
@@ -7,14 +7,14 @@ block center
             div(class="left")
                 p(class="header-segment") #{user.userName}
                 p(class="header-segment-separator") ->
-                p(class="header-segment clickable text-hover" hx-get="/projects" hx-target=".page") Projects
-                - if(project)
+                p(class="header-segment clickable text-hover" hx-get="/organizations" hx-target=".page") Organizations
+                - if(organization)
                     p(class="header-segment-separator") ->
-                    p(class="header-segment") #{project.name}
-                - if(newProjectPage)
+                    p(class="header-segment") #{organization.name}
+                - if(newOrgPage)
                     p(class="header-segment-separator") ->
                     p(class="header-segment") Create new
             div(class="right")
-                p(class="clickable text-hover" hx-get="/projects/new" hx-target=".page") New Project
+                p(class="clickable text-hover" hx-get="/organizations/new" hx-target=".page") New Organization
 
         block subContent
