--- a/src/views/users/lobby.pug
+++ b/src/views/users/lobby.pug
@@ -11,7 +11,7 @@ block content
                         li
                             p(class="clickable text-hover" hx-get="/projects" hx-target=".page") Projects
                         li
-                            p(class="clickable text-hover") Organizations
+                            p(class="clickable text-hover" hx-get="/organizations" hx-target=".page") Organizations
                         li
                             p(class="clickable text-hover") Invitations
 
