--- a/src/views/projects/show.pug
+++ b/src/views/projects/show.pug
@@ -12,7 +12,7 @@ block subContent
             br
 
             div(class="description-container")
-                p(class="description") #{project.name} limits outgoing requests to #{project.callLimit} per #{projectTimeFrame.name.toLowerCase()}.
+                p(class="description") This project limits outgoing requests to #{project.callLimit} per #{projectTimeFrame.name.toLowerCase()}.
             br
             br
             br
