--- a/src/assets/css/organizations.css
+++ b/src/assets/css/organizations.css
@@ -60,6 +60,11 @@
     display: flex;
 }
 
+.org-dropdown{
+    border: 1px solid #a1a1aa;
+    padding-left: 5px
+}
+
 /* Project show page */
 .organization-show .top-bar{
     display: flex;
